@@ -1,3 +1,10 @@
+2006-01-01  Rob McMullen  <robm@users.sourceforge.net>
+
+	* added: program to run all tests
+
+	* fixed: problems in some examples with Python 2.2
+	
+
 2005-12-07  Rob McMullen  <robm@users.sourceforge.net>
 
 	* Released version 2.0.0b2 to SourceForge
